<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:id="@+id/listFragment2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="65dp"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:text="@string/nom"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toStartOf="@+id/editText7"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="205dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.12" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="71dp"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:text="@string/prenom"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/zone"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ssss"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zone_de_travaux_ou_scolaire"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spinner"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="95dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number|textPersonName"
                android:text="@string/_0"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:layout_constraintVertical_bias="0.566" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/vitesse"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintEnd_toStartOf="@+id/editText3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:layout_constraintVertical_bias="0.49" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/montant_de_l_amande"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintEnd_toStartOf="@+id/editText4"
                app:layout_constraintStart_toEndOf="@+id/editText3"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/__0"
                app:layout_constraintBottom_toTopOf="@+id/guideline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                tools:ignore="DuplicateClickableBoundsCheck" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:ems="10"
                android:hint="@string/nom1"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/guideline7"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/prenom1"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/entrez_toutes_les_champs_correctement"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.888" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>